--- a/core/src/main/resources/runtime-properties/common-shared.properties
+++ b/core/src/main/resources/runtime-properties/common-shared.properties
@@ -84,31 +84,34 @@ store.front.webapp.prefix=http://localhost:8080/
 
 # Settings for the default persistence unit
 blPU.hibernate.hbm2ddl.auto=none
-blPU.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+blPU.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 blPU.hibernate.show_sql=false
 blPU.hibernate.cache.use_second_level_cache=true
 blPU.hibernate.cache.use_query_cache=true
 blPU.hibernate.hbm2ddl.import_files=null
+blPU.hibernate.hbm2ddl.import_files_sql_extractor=org.broadleafcommerce.common.util.sql.importsql.DemoPostgresSingleLineSqlCommandExtractor
 blPU.hibernate.connection.useUnicode=true
 blPU.hibernate.connection.characterEncoding=UTF-8
 blPU.hibernate.connection.charSet=UTF-8
 # Settings for the CMS storage persistence unit
 blCMSStorage.hibernate.hbm2ddl.auto=none
-blCMSStorage.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+blCMSStorage.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 blCMSStorage.hibernate.show_sql=false
 blCMSStorage.hibernate.cache.use_second_level_cache=true
 blCMSStorage.hibernate.cache.use_query_cache=true
 blCMSStorage.hibernate.hbm2ddl.import_files=null
+blCMSStorage.hibernate.hbm2ddl.import_files_sql_extractor=org.broadleafcommerce.common.util.sql.importsql.DemoPostgresSingleLineSqlCommandExtractor
 blCMSStorage.hibernate.connection.useUnicode=true
 blCMSStorage.hibernate.connection.characterEncoding=UTF-8
 blCMSStorage.hibernate.connection.charSet=UTF-8
 # Settings for the secure persistence unit
 blSecurePU.hibernate.hbm2ddl.auto=none
-blSecurePU.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+blSecurePU.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 blSecurePU.hibernate.show_sql=false
 blSecurePU.hibernate.cache.use_second_level_cache=false
 blSecurePU.hibernate.cache.use_query_cache=false
 blSecurePU.hibernate.hbm2ddl.import_files=null
+blSecurePU.hibernate.hbm2ddl.import_files_sql_extractor=org.broadleafcommerce.common.util.sql.importsql.DemoPostgresSingleLineSqlCommandExtractor
 blSecurePU.hibernate.connection.useUnicode=true
 blSecurePU.hibernate.connection.characterEncoding=UTF-8
 blSecurePU.hibernate.connection.charSet=UTF-8
