--- a/database.properties
+++ b/database.properties
@@ -1,5 +1,5 @@
 # Connection properties for the database given to Tomcat and used by META-INF/context.xml
-database.user=sa
-database.password=
-database.driver=org.hsqldb.jdbcDriver
-database.url=jdbc:hsqldb:hsql://localhost/broadleaf
+database.user=postgres
+database.password=broadleaf
+database.driver=org.postgresql.Driver
+database.url=jdbc:postgresql://localhost:5432/broadleaf
